# sreality-scraper

./: .env  Dockerfile  README.md  app.py  docker-compose.yml  entrypoint.sh  pyproject.toml  seeds.py
migrations/versions/: f2ce63107fd0_.py
templates/: index.html
