[tool.poetry]
name = "sreality-scraper"
version = "0.1.0"
description = ""
authors = ["Martin Dluhoš <dluhos.martin@gmail.com>"]
readme = "README.md"
packages = [{include = "sreality_scraper"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
